Fixed IE scrollbars, I think? I dunno. IE is weird.

--- a/src/app/storymaps/tpl/mongolCustom/css/styles.css
+++ b/src/app/storymaps/tpl/mongolCustom/css/styles.css
@@ -54,10 +54,6 @@ p {
 	height: 110% !important;
 }
 
-.sidePanel {
-	overflow:hidden !important;
-}
-
 #sidePanel {
 	display: table-cell !important;
 	position: fixed !important;
@@ -66,11 +62,13 @@ p {
 	background-color: transparent !important;
 	z-index: 2 !important;
 	border-right: 0px solid !important;
-		overflow:hidden !important;
+	overflow-y:hidden !important;
 }
 
 .sidePanel .sections {
 	padding: 0px !important;
+	overflow-y: scroll !important;
+	-ms-overflow-style: none !important;
 }
 
 .sidePanel .sectionsWrapper {
@@ -84,8 +82,6 @@ p {
 #sidePanelInner {
 	border-right: 0px !important;
 	padding-left: 50px !important;
-	overflow-y:scroll !important;
-
 }
 
 .navDots {
